// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hover for step 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#E6E8EC",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIconFilled"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`renders me correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders not me correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type action correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#E6E8EC",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`renders type contact correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#E6E8EC",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type reminder correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(183, 231, 240)",
      "borderBottomColor": "#E6E8EC",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type swipeable correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#E6E8EC",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;
